--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -149,14 +149,12 @@
                                     <img src="img/portfolio-1.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tort
-                                            
-                                            or, auctor id gravi condime, viverra quis sem.
+                                           New Raw Material Warehouse , Monde Nissin
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Monde Nissin Chonburi</h3>
+                                    <h3>New Raw Material Warehouse</h3>
                                     <a href="MN01.html" class="btn"  >+</a>
                                 </div>
                             </div>
@@ -164,7 +162,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.2s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-2.jpg" alt="Image">
+                                    <img src="img/UN4.png" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             โครงการก่อสร้างสถานีรถไฟฟ้าสายสีส้ม (M&E System Work)
@@ -180,7 +178,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.3s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-3.jpg" alt="Image">
+                                    <img src="img/TG4.png" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                            โครงการก่อสร้างอาคารผู้ป่วยนอก <br>(M&E System Work)
@@ -196,7 +194,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-5.jpg" alt="Image">
+                                    <img src="img/TC3.png" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             โครงการก่อสร้างกำแพงกันดิน<br>โรงงานทีซีฟาร์มาซูติคอล บางบอน 
@@ -212,7 +210,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/MEA7.png" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             โครงการก่อสร้าง Substation 24 KV <br>การประปานครหลวงสำนักงานใหญ่
@@ -220,7 +218,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Substation 24 kv Building</h3>
+                                    <h3>Substation 24 kv Building <br> MWA </h3>
                                     <a class="btn" href="MEA2.html" >+</a>
                                 </div>
                             </div>
@@ -228,7 +226,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/MEA6.png" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             โครงการก่อสร้าง Substation 115 KV <br>การไฟฟ้านครหลวง <br>นิคมอุตสาหกรรมลาดกระบัง 
@@ -237,7 +235,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Substation 115 kv Building</h3>
+                                    <h3>Substation 115 kv Building <br>MEA Ladkrabang</h3>
                                     <a class="btn" href="MEA.html" >+</a>
                                 </div>
                             </div>
@@ -245,7 +243,7 @@
                          <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/FE4.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             โครงการก่อสร้างและปรับปรุงสายส่งระบบ 115 KV สถานีไฟฟ้าแรงสูงภูเก็ต 3
@@ -261,7 +259,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/Petchkasem3.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             10th Floors Car Park Building, Petkasem 2 Hospital
@@ -270,7 +268,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>
-                                        Petkasem 2 Hospital (Bangkok)
+                                        10th Floors Car Park Building<br>Petkasem 2 Hospital (Bangkok)
                                     </h3>
                                     <a class="btn" href="Petkasem2.html" >+</a>
                                 </div>
@@ -296,7 +294,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/Circle11.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             The Circle Ratchapruk <br>Renovate Phase 1
@@ -304,7 +302,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>The Circle Ratchapruk</h3>
+                                    <h3>Renovate Phase 1<br>The Circle Ratchapruk</h3>
                                     <a class="btn" href="Circle1.html" >+</a>
                                 </div>
                             </div>
@@ -312,7 +310,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/SIG5.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             SIG Combibloc Factory Expansion
@@ -328,7 +326,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/Circle10.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             Villa Market, The Circle Ratchapruk
@@ -336,7 +334,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>The Circle Ratchapruk</h3>
+                                    <h3>Villa Market<br>The Circle Ratchapruk</h3>
                                     <a class="btn" href="Circle.html">+</a>
                                 </div>
                             </div>
@@ -344,7 +342,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/Buriram9.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             12.5 Mw  Solar Power Plant for <br>BCP Nongkee, Buriram 
@@ -353,7 +351,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>12.5 Mw Solar Power Plant </h3>
+                                    <h3>12.5 Mw Solar Farm<br>Nongkee, Buriram  </h3>
                                     <a class="btn" href="BCP , Buriram2.html" >+</a>
                                 </div>
                             </div>
@@ -361,7 +359,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/Buriram7.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             12.5 Mw  Solar Power Plant for <br>BCP Prakonchai, Buriram
@@ -369,7 +367,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>12.5 Mw  Solar Power Plant</h3>
+                                    <h3>12.5 Mw  Solar Farm<br>Prakonchai, Buriram</h3>
                                     <a class="btn" href="BCP , Buriram.html" >+</a>
                                 </div>
                             </div>
@@ -377,7 +375,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/Prachinburi4.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                            25 Mw  Solar Power Plant for <br>BCP Kabinburi, Prachinburi 
@@ -393,7 +391,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/Ayutthaya4.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                            25 Mw  Solar Power Plant for <br>BCP Bang Pa Hun, Ayutthaya
@@ -401,7 +399,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>25 Mw  Solar Power Plant</h3>
+                                    <h3>25 Mw  Solar Farm<br>Bang Pa Hun, Ayutthaya</h3>
                                     <a class="btn" href="BCP , Ayutthaya.html">+</a>
                                 </div>
                             </div>
@@ -409,7 +407,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/Chaiyaphum4.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             25 Mw  Solar Power Plant for <br>BCP Bamnejnarong, Chaiyapum
@@ -417,7 +415,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>25 Mw  Solar Power Plant</h3>
+                                    <h3>25 Mw  Solar Farm<br>Bamnejnarong, Chaiyapum</h3>
                                     <a class="btn" href="BCP, Chaiyapum.html">+</a>
                                 </div>
                             </div>
@@ -425,7 +423,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/BCP4.png" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             44 Mw  Solar Power Plant for <br>BCP Bang Pa-in, Ayutthaya
@@ -433,7 +431,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>44 Mw  Solar Power Plant</h3>
+                                    <h3>44 Mw  Solar Farm<br>Bang Pa-in, Ayutthaya</h3>
                                     <a class="btn" href="BCP.html">+</a>
                                 </div>
                             </div>
@@ -441,7 +439,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/Essilor4.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                            ESSILOR Manufacturing's <br>Canteen Extension 
@@ -458,7 +456,7 @@
                          <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <img src="img/Nissan13.png" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
                                             NISSAN CAR PARK
