--- a/public/BCP , Buriram.html
+++ b/public/BCP , Buriram.html
@@ -128,25 +128,25 @@
                 <div class="single">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-10">
+                            <div class="col-lg-12">
                                  <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : Bangchak Petroleum Public  Company Limited</p>
+                                    <p>Owner  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   : Bangchak Petroleum Public  Company Limited</p>
                                     <br />
                                     <p>Main Contractor &nbsp; &nbsp;	  : Solartron PCL</p>
                                     <br />
-                                     <p>M&E Subcontractor  &nbsp; &nbsp;	  : Mechatric Co.,Ltd., High Voltage, Low Voltage, MDB, MCC</p>
+                                     <p>M&E Sub&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;: Mechatric Co.,Ltd., High Voltage, Low Voltage, MDB, MCC</p>
                                     <br />
-                                    <p>Scope of Work &nbsp; &nbsp;	: Civil Work, HVAC, Fire alarm, Fire Protection and Lighting Work</p>
+                                    <p>Scope of Work &nbsp; &nbsp; &nbsp;	: Civil Work, HVAC, Fire alarm, Fire Protection and Lighting Work</p>
                                     <br />
-                                    <p>Underground Subcontractor &nbsp; &nbsp;	: ACTIVECON CO.,LTD., Manhole & HDPE Piping</p>
+                                    <p>Underground Sub &nbsp;: ACTIVECON CO.,LTD., Manhole & HDPE Piping</p>
                                     <br />
-                                    <p>Location &nbsp; &nbsp;		: Prakonchai, Burirum   </p>
+                                    <p>Location &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;		: Prakonchai, Burirum   </p>
                                     <br />
                                     <!-- <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
                                     <br /> -->
-                                    <p>Project Value &nbsp; &nbsp;	: 31.81 Million Baht      </p>
+                                    <p>Project Value  &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;: 31.81 Million Baht      </p>
                                     <br />
-                                    <p>Year &nbsp; &nbsp;		: 2013-2014</p>
+                                    <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;: 2013-2014</p>
                                 </div>
                                 <br /><br />
                                 <img src="img/Burirum1.png">
@@ -167,11 +167,11 @@
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-contact">
-                                <!-- <h1>ActiveCon Co., Ltd.</h1> -->
+                                <h1>ActiveCon Co., Ltd.</h1>
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong, Bangkruai, Nonthaburi 11130</p>
-                                 <p><i class="fa fa-phone-alt"></i>+6624432256,+66863884916</p>
-                                <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p>
+                                 <!-- <p><i class="fa fa-phone-alt"></i>+6624432256,+66863884916</p>
+                                <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p> -->
                                 <!-- <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -181,26 +181,29 @@
                                 </div> -->
                             </div>
                         </div>
-                         <!-- <div class="col-md-6 col-lg-3">
+                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
-                                <h2>Services Areas</h2>
-                                <a href="">TURNKEY DESIGN AND BUILD</a>
-                                <a href="">CONSTRUCTION WORK</a>
-                                <a href="">MECHANICAL WORK</a>
-                                <a href="">ELECTRICAL SYSTEM WORK</a>
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+                                <p><i class="fa fa-phone-alt"></i> +6624432256,+66863884916</p>
+                                <!-- <a href="blog.html">Testimonial</a>
+                                <a href="contact.html">Contact Us</a> -->
                             </div>
                         </div>
                          <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
-                                <h2>Useful Pages</h2>
-                                <a href="about.html">About Us</a>
-                                <a href="team.html">Our Team</a>
-                                <a href="portfolio.html">Projects</a>
-                                <a href="blog.html">Testimonial</a>
-                                <a href="contact.html">Contact Us</a>
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+                                <p><i class="fa fa-envelope"></i>  wuttisit.atc@gmail.com</p>
+                                <!-- <a href="blog.html">Testimonial</a>
+                                <a href="contact.html">Contact Us</a> -->
                             </div>
-                        </div> -->
-                       
+                        </div>
+                        
                     </div>
                 </div>
                 <div class="container copyright">
