--- a/public/Nissan.html
+++ b/public/Nissan.html
@@ -183,8 +183,8 @@
                                 <h1>ActiveCon Co., Ltd.</h1>
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong, Bangkruai, Nonthaburi 11130</p>
-                                 <p><i class="fa fa-phone-alt"></i>+6624432256,+66863884916</p>
-                                <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p>
+                                <!-- <s>+6624432256,+66863884916</s>
+                                <s>wuttisit.atc@gmail.com</s> -->
                                 <!-- <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -194,28 +194,31 @@
                                 </div> -->
                             </div>
                         </div>
-                         <!-- <div class="col-md-6 col-lg-3">
+                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
-                                <h2>Services Areas</h2>
-                                <a href="">TURNKEY DESIGN AND BUILD</a>
-                                <a href="">CONSTRUCTION WORK</a>
-                                <a href="">MECHANICAL WORK</a>
-                                <a href="">ELECTRICAL SYSTEM WORK</a>
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+                                <p><i class="fa fa-phone-alt"></i> +6624432256,+66863884916</p>
+                                <!-- <a href="blog.html">Testimonial</a>
+                                <a href="contact.html">Contact Us</a> -->
                             </div>
                         </div>
                          <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
-                                <h2>Useful Pages</h2>
-                                <a href="about.html">About Us</a>
-                                <a href="team.html">Our Team</a>
-                                <a href="portfolio.html">Projects</a>
-                                <a href="blog.html">Testimonial</a>
-                                <a href="contact.html">Contact Us</a>
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+                                <p><i class="fa fa-envelope"></i>  wuttisit.atc@gmail.com</p>
+                                <!-- <a href="blog.html">Testimonial</a>
+                                <a href="contact.html">Contact Us</a> -->
                             </div>
-                        </div> -->
+                        </div>
+                        
                     </div>
                 </div>
-                
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
