--- a/public/BCP , Buriram.html
+++ b/public/BCP , Buriram.html
@@ -170,8 +170,8 @@
                                 <h1>ActiveCon Co., Ltd.</h1>
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong, Bangkruai, Nonthaburi 11130</p>
-                                 <!-- <p><i class="fa fa-phone-alt"></i>+6624432256,+66863884916</p>
-                                <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p> -->
+                                <!-- <s>+6624432256,+66863884916</s>
+                                <s>wuttisit.atc@gmail.com</s> -->
                                 <!-- <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
